--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -114,9 +114,11 @@ FileETag None
   ErrorLog /var/log/apache2/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
   # CustomLog /var/log/apache2/access.log combined
+  CustomLog "|/usr/sbin/ipset -" "add BLACKLIST %a -!" env=ngipaddress
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly_relay.php 10080 HA" custom
   
   RewriteEngine on
+  RewriteRule .*index.php$ - [E=ngipaddress:1]
   RewriteRule .* http://*****.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
 
