--- a/memo/20180717.conf
+++ b/memo/20180717.conf
@@ -33,6 +33,8 @@ LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
+# LoadModule proxy_module /usr/lib/apache2/modules/mod_proxy.so
+# LoadModule proxy_fcgi_module /usr/lib/apache2/modules/mod_proxy_fcgi.so
 
 ErrorLog /var/log/apache2/error.log
 
@@ -80,6 +82,14 @@ MaxSpareServers 5
 MaxRequestWorkers 150
 MaxConnectionsPerChild 0
 
+# StartServers 2
+# MinSpareThreads 10
+# MaxSpareThreads 20
+# ThreadLimit 64
+# ThreadsPerChild 10
+# MaxRequestWorkers 150
+# MaxConnectionsPerChild 0
+
 LanguagePriority ja en
 
 CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
@@ -87,6 +97,7 @@ CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
 <FilesMatch ".+\.php$">
   SetHandler application/x-httpd-php
   # SetHandler "proxy:unix:/run/php/php7.0-fpm.sock|fcgi://localhost"
+  # SetHandler "proxy:fcgi://127.0.0.1:9000/"
 </FilesMatch>
 
 ErrorDocument 404 "404a"
